force-app/main/default/objects/Strategic_Customer_Deliverable__c/fields/Deliverable_Type__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Type__c</fullName>
    <label>Deliverable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Roadmap Briefing</fullName>
            </value>
            <value>
                <fullName>Strategic/Executive Briefing</fullName>
            </value>
            <value>
                <fullName>Support Review (On-site)</fullName>
            </value>
            <value>
                <fullName>Support Review (Remote)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>