force-app/main/default/objects/Strategic_Customer_Deliverable__c/fields/Main_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Strategic Customer Deliverables</relationshipLabel>
    <relationshipName>Strategic_Customer_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>