force-app/main/default/objects/Strategic_Customer_Deliverable__c/fields/Strategic_Customer_Program__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Customer_Program__c</fullName>
    <label>Strategic Customer Program</label>
    <referenceTo>Strategic_Customer_Program__c</referenceTo>
    <relationshipLabel>Strategic Customer Deliverables</relationshipLabel>
    <relationshipName>Strategic_Customer_Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>